Fixing overflow problems on about/contact pages

--- a/src/common/globals.scss
+++ b/src/common/globals.scss
@@ -37,9 +37,9 @@ select {
 select {
   border: none;
 }
+
 main {
   width: 100%;
-  height: 100%;
   position: absolute;
 }
 
